--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npm run lint && npm run test:unit",
     "test:unit": "tape test/*-tests.js | tap-spec",
+    "coverage": "istanbul cover tape test/*-tests.js", 
     "lint": "eslint . --fix --ignore-pattern node_modules"
   },
   "repository": {
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "eslint": "^6.0.1",
+    "istanbul": "^0.4.5",
     "sinon": "^7.3.2",
     "tap-spec": "^5.0.0",
     "tape": "^4.11.0"
