--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "manage @architect Function logging",
   "main": "index.js",
   "scripts": {
-    "test": "npm run lint && npm run test:unit",
+    "test": "npm run lint && npm run coverage",
     "test:unit": "tape test/*-tests.js | tap-spec",
-    "coverage": "istanbul cover tape test/*-tests.js",
+    "coverage": "nyc --reporter=lcov --reporter=text-summary npm run test:unit",
     "lint": "eslint . --fix --ignore-pattern node_modules"
   },
   "repository": {
@@ -32,8 +32,9 @@
     "strftime": "^0.10.0"
   },
   "devDependencies": {
+    "codecov": "^3.5.0",
     "eslint": "^6.0.1",
-    "istanbul": "^0.4.5",
+    "nyc": "^14.1.1",
     "sinon": "^7.3.2",
     "tap-spec": "^5.0.0",
     "tape": "^4.11.0"
