--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@architect/logs",
-  "version": "1.0.6-RC.1",
+  "version": "1.0.6",
   "description": "manage @architect Function logging",
   "main": "index.js",
   "scripts": {
