--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Node CI
 
-on: [push, pull_request, release]
+on: [push, pull_request, create]
 
 jobs:
   # Test the build
@@ -27,6 +27,7 @@ jobs:
     - run: echo ${{ github.ref }}
     - run: echo ${{ github.event_name }}
     - run: echo ${{ github.event.action }}
+    - run: echo ${{ startsWith(github.ref, 'refs/tags/v')}}
 
     - name: Install
       run: npm install
@@ -38,7 +39,8 @@ jobs:
   publish-npm:
     needs: build
     # if: github.ref == 'refs/heads/ghci'
-    if: github.event_name == 'release' && github.event.action == 'created'
+    # if: github.event_name == 'release' && github.event.action == 'created'
+    if: github.event_name == 'create' && startsWith(github.ref, 'refs/tags/v') == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
