--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,9 @@ jobs:
     - run: echo ${{ github.ref }}
     - run: echo ${{ github.event_name }}
     - run: echo ${{ github.event.action }}
-    - run: echo ${{ startsWith(github.ref, 'refs/tags/v')}}
+    # - run: echo ${{ startsWith(github.ref, 'refs/tags/v')}}
+    - run: echo ${{ startsWith(github.ref, 'refs/tags/v') == 'true' }}
+    - run: echo ${{ startsWith(github.ref, 'refs/tags/v') == true }}
 
     - name: Install
       run: npm install
