--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
-        os: [windows-latest, ubuntu-latest, macOS-latest]
+        node-version: 8.x #[8.x, 10.x, 12.x]
+        os: ubuntu-latest #[windows-latest, ubuntu-latest, macOS-latest]
 
     # Go
     steps:
@@ -27,9 +27,11 @@ jobs:
     - run: echo ${{ github.ref }}
     - run: echo ${{ github.event_name }}
     - run: echo ${{ github.event.action }}
-    # - run: echo ${{ startsWith(github.ref, 'refs/tags/v')}}
+    - run: echo ${{ startsWith(github.ref, 'refs/tags/v')}}
     - run: echo ${{ startsWith(github.ref, 'refs/tags/v') == 'true' }}
     - run: echo ${{ startsWith(github.ref, 'refs/tags/v') == true }}
+    - run: echo ${{ startsWith(github.ref, 'refs/tags/v') == 'false' }}
+    - run: echo ${{ startsWith(github.ref, 'refs/tags/v') == false }}
 
     - name: Install
       run: npm install
@@ -42,7 +44,7 @@ jobs:
     needs: build
     # if: github.ref == 'refs/heads/ghci'
     # if: github.event_name == 'release' && github.event.action == 'created'
-    if: github.event_name == 'create' && startsWith(github.ref, 'refs/tags/v') == 'true'
+    if: github.event_name == 'create' && startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
