--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: 8.x #[8.x, 10.x, 12.x]
+        node-version: [10.x] #[8.x, 10.x, 12.x]
         os: ubuntu-latest #[windows-latest, ubuntu-latest, macOS-latest]
 
     # Go
