--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         node-version: [10.x] #[8.x, 10.x, 12.x]
-        os: ubuntu-latest #[windows-latest, ubuntu-latest, macOS-latest]
+        os: [ubuntu-latest] #[windows-latest, ubuntu-latest, macOS-latest]
 
     # Go
     steps:
