--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@architect/logs",
-  "version": "1.0.4",
+  "version": "1.0.5-RC.3",
   "description": "manage @architect Function logging",
   "main": "index.js",
   "scripts": {
     "test": "npm run lint && npm run coverage",
     "test:unit": "tape test/*-tests.js | tap-spec",
     "coverage": "nyc --reporter=lcov --reporter=text-summary npm run test:unit",
-    "lint": "eslint . --fix --ignore-pattern node_modules"
+    "lint": "eslint . --fix --ignore-pattern node_modules",
+    "rc": "npm version prerelease --preid RC"
   },
   "repository": {
     "type": "git",
