--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@architect/logs",
   "version": "1.0.5",
-  "description": "manage @architect Function logging",
+  "description": "Manage logging from Architect-provisioned cloud functions",
   "main": "index.js",
   "scripts": {
     "test": "npm run lint && npm run coverage",
