--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@architect/logs",
   "version": "1.0.5",
-  "description": "manage @architect Function logging",
+  "description": "Manage logging from Architect-provisioned cloud functions",
   "main": "index.js",
   "scripts": {
     "test": "npm run lint && npm run coverage",
@@ -25,16 +25,16 @@
   },
   "homepage": "https://github.com/architect/logs#readme",
   "dependencies": {
-    "@architect/utils": "^1.3.8",
-    "aws-sdk": "^2.538.0",
-    "chalk": "^2.4.2",
+    "@architect/utils": "^1.3.9",
+    "aws-sdk": "^2.575.0",
+    "chalk": "^3.0.0",
     "run-parallel": "^1.1.9",
     "run-waterfall": "^1.1.6",
     "strftime": "^0.10.0"
   },
   "devDependencies": {
     "codecov": "^3.6.1",
-    "eslint": "^6.5.0",
+    "eslint": "^6.6.0",
     "nyc": "^14.1.1",
     "sinon": "^7.5.0",
     "tap-spec": "^5.0.0",
