--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/architect/logs#readme",
   "dependencies": {
-    "@architect/utils": "^1.3.11-RC.2",
+    "@architect/utils": "^1.4.1",
     "aws-sdk": "^2.596.0",
     "chalk": "^3.0.0",
     "run-parallel": "^1.1.9",
