--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@architect/logs",
-  "version": "1.0.6",
+  "version": "1.0.7-RC.1",
   "description": "Manage logging from Architect-provisioned cloud functions",
   "main": "index.js",
   "scripts": {
@@ -25,8 +25,8 @@
   },
   "homepage": "https://github.com/architect/logs#readme",
   "dependencies": {
-    "@architect/utils": "^1.3.9",
-    "aws-sdk": "^2.575.0",
+    "@architect/utils": "^1.4.4",
+    "aws-sdk": "^2.598.0",
     "chalk": "^3.0.0",
     "run-parallel": "^1.1.9",
     "run-waterfall": "^1.1.6",
@@ -34,10 +34,10 @@
   },
   "devDependencies": {
     "codecov": "^3.6.1",
-    "eslint": "^6.6.0",
-    "nyc": "^14.1.1",
-    "sinon": "^7.5.0",
+    "eslint": "^6.8.0",
+    "nyc": "^15.0.0",
+    "sinon": "^8.0.4",
     "tap-spec": "^5.0.0",
-    "tape": "^4.11.0"
+    "tape": "^4.12.1"
   }
 }
