--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
   },
   "homepage": "https://github.com/architect/logs#readme",
   "dependencies": {
-    "@architect/utils": "^1.4.7",
-    "aws-sdk": "^2.612.0",
-    "chalk": "^3.0.0",
-    "run-parallel": "^1.1.9",
-    "run-waterfall": "^1.1.6",
-    "strftime": "^0.10.0"
+    "@architect/utils": "~1.5.0",
+    "aws-sdk": "~2.642.0",
+    "chalk": "~3.0.0",
+    "run-parallel": "~1.1.9",
+    "run-waterfall": "~1.1.6",
+    "strftime": "~0.10.0"
   },
   "devDependencies": {
-    "codecov": "^3.6.4",
+    "codecov": "^3.6.5",
     "eslint": "^6.8.0",
     "nyc": "^15.0.0",
-    "sinon": "^8.1.1",
+    "sinon": "^9.0.1",
     "tap-spec": "^5.0.0",
-    "tape": "^4.13.0"
+    "tape": "^4.13.2"
   }
 }
