--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint . --fix --ignore-pattern node_modules",
     "rc": "npm version prerelease --preid RC"
   },
+  "engines": {
+    "node" : ">=10"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/architect/logs.git"
@@ -34,7 +37,7 @@
   },
   "devDependencies": {
     "codecov": "^3.6.5",
-    "eslint": "^6.8.0",
+    "eslint": "^7.0.0",
     "nyc": "^15.0.0",
     "sinon": "^9.0.1",
     "tap-spec": "^5.0.0",
