--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run lint && npm run coverage",
-    "test:unit": "tape 'test/**/*-tests.js' | tap-spec",
+    "test:unit": "cross-env tape 'test/**/*-tests.js' | tap-spec",
     "coverage": "nyc --reporter=lcov --reporter=text-summary npm run test:unit",
-    "lint": "eslint . --fix --ignore-pattern node_modules",
+    "lint": "eslint . --fix",
     "rc": "npm version prerelease --preid RC"
   },
   "engines": {
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "codecov": "^3.6.5",
+    "cross-env": "~7.0.2",
     "eslint": "^7.0.0",
     "nyc": "^15.0.0",
     "sinon": "^9.0.1",
