--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@architect/eslint-config": "1.0.0",
+    "aws-sdk-mock": "~5.1.0",
     "codecov": "^3.6.5",
     "cross-env": "~7.0.2",
     "eslint": "^7.0.0",
