--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@architect/logs",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "Manage logging from Architect-provisioned cloud functions",
   "main": "index.js",
   "scripts": {
     "test": "npm run lint && npm run coverage",
     "test:unit": "cross-env tape 'test/**/*-tests.js' | tap-spec",
-    "coverage": "nyc --reporter=lcov --reporter=text-summary npm run test:unit",
+    "coverage": "nyc --reporter=lcov --reporter=text npm run test:unit",
     "lint": "eslint . --fix",
     "rc": "npm version prerelease --preid RC"
   },
@@ -42,6 +42,7 @@
     "codecov": "^3.8.1",
     "cross-env": "~7.0.3",
     "eslint": "^7.14.0",
+    "mock-require": "~3.0.3",
     "nyc": "^15.1.0",
     "sinon": "^9.2.1",
     "tap-spec": "^5.0.0",
