--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       run: npm install
 
     - name: Test
-      run: npm run test:unit
+      run: npm test
       env:
         CI: true
 
