--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   },
   "homepage": "https://github.com/architect/logs#readme",
   "dependencies": {
-    "@architect/inventory": "~1.3.0-RC.0",
-    "@architect/utils": "~2.0.2",
+    "@architect/inventory": "~1.3.0-RC.1",
+    "@architect/utils": "~2.0.5-RC.0",
     "aws-sdk": "~2.712.0",
     "chalk": "~4.1.0",
     "run-parallel": "~1.2.0",
