--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "rc": "npm version prerelease --preid RC"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "repository": {
     "type": "git",
@@ -21,14 +21,13 @@
     "arc",
     "logs"
   ],
-  "author": "Small Wins",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/architect/logs/issues"
   },
   "homepage": "https://github.com/architect/logs#readme",
   "dependencies": {
-    "@architect/inventory": "~1.4.3",
+    "@architect/inventory": "~2.0.3",
     "@architect/utils": "~3.0.1",
     "aws-sdk": "~2.880.0",
     "chalk": "~4.1.1",
@@ -37,12 +36,11 @@
     "strftime": "~0.10.0"
   },
   "devDependencies": {
-    "@architect/eslint-config": "1.0.0",
-    "aws-sdk-mock": "~5.1.0",
-    "codecov": "^3.8.2",
+    "@architect/eslint-config": "~1.0.0",
+    "aws-sdk-mock": "5.1.0",
     "cross-env": "~7.0.3",
-    "eslint": "^7.29.0",
-    "mock-fs": "~4.14.0",
+    "eslint": "^7.31.0",
+    "mock-fs": "~5.0.0",
     "mock-require": "~3.0.3",
     "nyc": "^15.1.0",
     "sinon": "^11.1.1",
