--- a/package.json
+++ b/package.json
@@ -27,25 +27,25 @@
   },
   "homepage": "https://github.com/architect/logs#readme",
   "dependencies": {
-    "@architect/inventory": "~2.0.4",
-    "@architect/utils": "~3.0.2",
+    "@architect/inventory": "~2.1.0",
+    "@architect/utils": "~3.0.4",
     "aws-sdk": "2.880.0",
-    "chalk": "~4.1.1",
+    "chalk": "~4.1.2",
     "run-parallel": "~1.2.0",
     "run-waterfall": "~1.1.7",
     "strftime": "~0.10.0"
   },
   "devDependencies": {
-    "@architect/eslint-config": "~1.0.0",
-    "aws-sdk-mock": "5.1.0",
+    "@architect/eslint-config": "~2.0.1",
+    "aws-sdk-mock": "~5.4.0",
     "cross-env": "~7.0.3",
-    "eslint": "^7.31.0",
-    "mock-fs": "~5.0.0",
+    "eslint": "^8.0.0",
+    "mock-fs": "~5.1.1",
     "mock-require": "~3.0.3",
     "nyc": "^15.1.0",
     "sinon": "^11.1.2",
     "tap-spec": "^5.0.0",
-    "tape": "^5.3.0"
+    "tape": "^5.3.1"
   },
   "eslintConfig": {
     "extends": "@architect/eslint-config"
