--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "3.0.3",
   "description": "Manage logging from Architect-provisioned cloud functions",
   "main": "index.js",
+  "bin": {
+    "arc-logs": "./cli.js"
+  },
   "scripts": {
     "test": "npm run lint && npm run coverage",
     "test:unit": "cross-env tape 'test/**/*-tests.js' | tap-spec",
@@ -27,25 +30,26 @@
   },
   "homepage": "https://github.com/architect/logs#readme",
   "dependencies": {
-    "@architect/inventory": "~2.2.0",
+    "@architect/inventory": "~3.0.0-RC.5",
     "@architect/utils": "~3.0.4",
-    "aws-sdk": "2.880.0",
-    "chalk": "~4.1.2",
+    "aws-sdk": "2.1001.0",
+    "chalk": "4.1.2",
+    "minimist": "~1.2.5",
     "run-parallel": "~1.2.0",
     "run-waterfall": "~1.1.7",
-    "strftime": "~0.10.0"
+    "strftime": "~0.10.1"
   },
   "devDependencies": {
     "@architect/eslint-config": "~2.0.1",
-    "aws-sdk-mock": "~5.4.0",
+    "aws-sdk-mock": "~5.6.0",
     "cross-env": "~7.0.3",
-    "eslint": "^8.2.0",
+    "eslint": "^8.7.0",
     "mock-fs": "~5.1.2",
     "mock-require": "~3.0.3",
     "nyc": "^15.1.0",
     "sinon": "^12.0.1",
     "tap-spec": "^5.0.0",
-    "tape": "^5.3.2"
+    "tape": "^5.4.1"
   },
   "eslintConfig": {
     "extends": "@architect/eslint-config"
