--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@architect/logs",
   "version": "4.0.0-RC.1",
   "description": "Manage logging from Architect-provisioned cloud functions",
-  "main": "index.js",
+  "main": "src/index.js",
   "bin": {
-    "arc-logs": "./cli.js"
+    "arc-logs": "src/cli.js"
   },
   "scripts": {
     "test": "npm run lint && npm run coverage",
@@ -29,6 +29,9 @@
     "url": "https://github.com/architect/logs/issues"
   },
   "homepage": "https://github.com/architect/logs#readme",
+  "files": [
+    "src/*"
+  ],
   "dependencies": {
     "@architect/inventory": "~3.0.0-RC.5",
     "@architect/utils": "~3.0.4",
@@ -41,15 +44,15 @@
   },
   "devDependencies": {
     "@architect/eslint-config": "~2.0.1",
-    "aws-sdk-mock": "~5.6.0",
+    "aws-sdk-mock": "~5.6.2",
     "cross-env": "~7.0.3",
-    "eslint": "^8.7.0",
+    "eslint": "^8.8.0",
     "mock-fs": "~5.1.2",
     "mock-require": "~3.0.3",
     "nyc": "^15.1.0",
-    "sinon": "^12.0.1",
+    "sinon": "^13.0.1",
     "tap-spec": "^5.0.0",
-    "tape": "^5.4.1"
+    "tape": "^5.5.0"
   },
   "eslintConfig": {
     "extends": "@architect/eslint-config"
