--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "src/*"
   ],
   "dependencies": {
-    "@architect/inventory": "~3.0.0-RC.5",
-    "@architect/utils": "~3.0.4",
+    "@architect/inventory": "~3.0.0",
+    "@architect/utils": "~3.1.0",
     "aws-sdk": "2.1001.0",
     "chalk": "4.1.2",
     "minimist": "~1.2.5",
@@ -46,13 +46,13 @@
     "@architect/eslint-config": "~2.0.1",
     "aws-sdk-mock": "~5.6.2",
     "cross-env": "~7.0.3",
-    "eslint": "^8.8.0",
+    "eslint": "^8.9.0",
     "mock-fs": "~5.1.2",
     "mock-require": "~3.0.3",
     "nyc": "^15.1.0",
     "sinon": "^13.0.1",
     "tap-spec": "^5.0.0",
-    "tape": "^5.5.0"
+    "tape": "^5.5.2"
   },
   "eslintConfig": {
     "extends": "@architect/eslint-config"
