--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "npm run lint && npm run coverage",
-    "test:unit": "cross-env tape 'test/**/*-tests.js' | tap-spec",
+    "test:unit": "cross-env tape 'test/**/*-tests.js' | tap-arc",
     "coverage": "nyc --reporter=lcov --reporter=text npm run test:unit",
     "lint": "eslint . --fix",
     "rc": "npm version prerelease --preid RC"
@@ -33,8 +33,8 @@
     "src/*"
   ],
   "dependencies": {
-    "@architect/inventory": "~3.1.0",
-    "@architect/utils": "~3.1.0",
+    "@architect/inventory": "~3.1.1",
+    "@architect/utils": "~3.1.1",
     "aws-sdk": "2.1001.0",
     "chalk": "4.1.2",
     "minimist": "~1.2.6",
@@ -46,13 +46,13 @@
     "@architect/eslint-config": "~2.0.1",
     "aws-sdk-mock": "~5.6.2",
     "cross-env": "~7.0.3",
-    "eslint": "^8.12.0",
+    "eslint": "^8.15.0",
     "mock-fs": "~5.1.2",
     "mock-require": "~3.0.3",
     "nyc": "^15.1.0",
     "sinon": "^13.0.1",
-    "tap-spec": "^5.0.0",
-    "tape": "^5.5.2"
+    "tap-arc": "^0.3.4",
+    "tape": "^5.5.3"
   },
   "eslintConfig": {
     "extends": "@architect/eslint-config"
