--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "arc-logs": "src/cli.js"
   },
   "scripts": {
-    "test": "npm run lint && npm run coverage",
+    "test": "npm run lint && npm run test:unit",
     "test:unit": "cross-env tape 'test/**/*-tests.js' | tap-arc",
     "coverage": "nyc --reporter=lcov --reporter=text npm run test:unit",
     "lint": "eslint . --fix",
