--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "src/*"
   ],
   "dependencies": {
-    "@architect/inventory": "~3.1.1",
+    "@architect/inventory": "~3.2.0-RC.0",
     "@architect/utils": "~3.1.1",
     "aws-sdk": "2.1001.0",
     "chalk": "4.1.2",
