--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "src/*"
   ],
   "dependencies": {
-    "@architect/inventory": "~3.3.4-RC.0",
+    "@architect/inventory": "~3.3.4",
     "@architect/utils": "~3.1.2",
     "aws-sdk": "2.1055.0",
     "chalk": "4.1.2",
@@ -50,7 +50,7 @@
     "mock-fs": "~5.2.0",
     "mock-require": "~3.0.3",
     "nyc": "^15.1.0",
-    "sinon": "^14.0.2",
+    "sinon": "^15.0.0",
     "tap-spec": "^5.0.0",
     "tape": "^5.6.1"
   },
