--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@architect/logs",
-  "version": "4.0.6-RC.0",
+  "version": "4.0.6",
   "description": "Manage logging from Architect-provisioned cloud functions",
   "main": "src/index.js",
   "bin": {
