--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "npm run lint && npm run coverage",
-    "test:unit": "cross-env tape 'test/**/*-tests.js' | tap-spec",
+    "test:unit": "cross-env tape 'test/**/*-tests.js' | tap-arc",
     "coverage": "nyc --reporter=lcov --reporter=text npm run test:unit",
     "lint": "eslint . --fix",
     "rc": "npm version prerelease --preid RC"
@@ -51,7 +51,7 @@
     "mock-require": "~3.0.3",
     "nyc": "^15.1.0",
     "sinon": "^15.2.0",
-    "tap-spec": "^5.0.0",
+    "tap-arc": "^1.0.0",
     "tape": "^5.6.6"
   },
   "eslintConfig": {
