--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint": "^8.47.0",
     "mock-fs": "~5.2.0",
     "mock-require": "~3.0.3",
+    "mock-tmp": "~0.0.2",
     "nyc": "^15.1.0",
     "sinon": "^15.2.0",
     "tap-arc": "^1.0.0",
