--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "src/*"
   ],
   "dependencies": {
-    "@architect/inventory": "~3.6.0",
+    "@architect/inventory": "~3.6.5",
     "@architect/utils": "~3.1.9",
     "aws-sdk": "^2.1363.0",
     "chalk": "4.1.2",
@@ -43,16 +43,16 @@
     "strftime": "~0.10.2"
   },
   "devDependencies": {
-    "@architect/eslint-config": "~2.1.1",
+    "@architect/eslint-config": "~2.1.2",
     "aws-sdk-mock": "~5.8.0",
     "cross-env": "~7.0.3",
-    "eslint": "^8.47.0",
+    "eslint": "~8.55.0",
     "mock-require": "~3.0.3",
     "mock-tmp": "~0.0.2",
     "nyc": "^15.1.0",
-    "sinon": "^15.2.0",
-    "tap-arc": "^1.0.0",
-    "tape": "^5.6.6"
+    "sinon": "~17.0.1",
+    "tap-arc": "~1.2.2",
+    "tape": "~5.7.2"
   },
   "eslintConfig": {
     "extends": "@architect/eslint-config"
