--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   "dependencies": {
     "@architect/inventory": "~4.0.0-RC.2",
     "@architect/utils": "~4.0.0-RC.3",
-    "@aws-lite/client": "~0.14.2",
-    "@aws-lite/cloudformation": "~0.0.3",
-    "@aws-lite/cloudwatch-logs": "~0.0.3",
+    "@aws-lite/client": "^0.15.1",
+    "@aws-lite/cloudformation": "^0.0.3",
+    "@aws-lite/cloudwatch-logs": "^0.0.3",
     "chalk": "4.1.2",
     "minimist": "~1.2.8",
     "run-parallel": "~1.2.0",
@@ -53,7 +53,7 @@
     "nyc": "^15.1.0",
     "sinon": "~17.0.1",
     "tap-arc": "~1.2.2",
-    "tape": "~5.7.3"
+    "tape": "~5.7.4"
   },
   "eslintConfig": {
     "extends": "@architect/eslint-config"
