--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "scripts": {
     "test": "npm run lint && npm run coverage",
     "test:nolint": "npm run coverage",
-    "test:unit": "cross-env tape 'test/**/*-tests.js' | tap-arc",
+    "test:unit": "cross-env tape 'test/**/*-tests.js'",
     "coverage": "nyc --reporter=lcov --reporter=text npm run test:unit",
     "lint": "eslint . --fix",
     "rc": "npm version prerelease --preid RC"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=20"
   },
   "repository": {
     "type": "git",
@@ -34,26 +34,21 @@
     "src/*"
   ],
   "dependencies": {
-    "@architect/inventory": "~4.0.5",
-    "@architect/utils": "~4.0.6",
-    "@aws-lite/client": "^0.21.1",
-    "@aws-lite/cloudformation": "^0.0.5",
-    "@aws-lite/cloudwatch-logs": "^0.0.4",
-    "chalk": "4.1.2",
-    "minimist": "~1.2.8",
-    "run-parallel": "~1.2.0",
-    "run-waterfall": "~1.1.7",
-    "strftime": "~0.10.2"
+    "@architect/inventory": "~4.0.10-RC.0",
+    "@architect/utils": "~5.0.0",
+    "@aws-lite/client": "~0.23.2",
+    "@aws-lite/cloudformation": "~0.1.3",
+    "@aws-lite/cloudwatch-logs": "~0.1.0",
+    "strftime": "0.10.3"
   },
   "devDependencies": {
     "@architect/eslint-config": "~3.0.0",
-    "cross-env": "~7.0.3",
-    "eslint": "~9.1.1",
+    "cross-env": "~10.0.0",
+    "eslint": "~9.36.0",
     "mock-require": "~3.0.3",
     "mock-tmp": "~0.0.4",
-    "nyc": "^15.1.0",
-    "sinon": "~17.0.1",
-    "tap-arc": "~1.2.2",
-    "tape": "~5.7.5"
+    "nyc": "~17.1.0",
+    "sinon": "~21.0.0",
+    "tape": "~5.9.0"
   }
 }
