--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
   "dependencies": {
     "@architect/inventory": "~5.0.0",
     "@architect/utils": "~5.0.0",
-    "@aws-lite/client": "~0.23.2",
-    "@aws-lite/cloudformation": "~0.1.3",
-    "@aws-lite/cloudwatch-logs": "~0.1.0",
+    "@aws-lite/client": "^0.23.2",
+    "@aws-lite/cloudformation": "^0.1.3",
+    "@aws-lite/cloudwatch-logs": "^0.1.0",
     "strftime": "0.10.3"
   },
   "devDependencies": {
