--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "src/*"
   ],
   "dependencies": {
-    "@architect/inventory": "~6.0.0-RC.0",
-    "@architect/utils": "~6.0.0-RC.1",
+    "@architect/inventory": "~6.0.0",
+    "@architect/utils": "~6.0.0",
     "@aws-lite/client": "^0.23.2",
     "@aws-lite/cloudformation": "^0.1.3",
     "@aws-lite/cloudwatch-logs": "^0.1.0",
@@ -43,8 +43,8 @@
   },
   "devDependencies": {
     "@architect/eslint-config": "~3.0.0",
-    "cross-env": "~10.0.0",
-    "eslint": "~9.36.0",
+    "cross-env": "~10.1.0",
+    "eslint": "~9.39.1",
     "mock-require": "~3.0.3",
     "mock-tmp": "~0.0.4",
     "nyc": "~17.1.0",
