--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "test": "npm run lint && npm run coverage",
     "test:nolint": "npm run coverage",
-    "test:unit": "cross-env tape 'test/**/*-tests.js'",
-    "coverage": "nyc --reporter=lcov --reporter=text npm run test:unit",
+    "test:unit": "node --test test/**/*-tests.js",
+    "coverage": "node --test --experimental-test-coverage test/**/*-tests.js",
     "lint": "eslint . --fix",
     "rc": "npm version prerelease --preid RC"
   },
@@ -43,12 +43,6 @@
   },
   "devDependencies": {
     "@architect/eslint-config": "~3.0.0",
-    "cross-env": "~10.1.0",
-    "eslint": "~9.39.1",
-    "mock-require": "~3.0.3",
-    "mock-tmp": "~0.0.4",
-    "nyc": "~17.1.0",
-    "sinon": "~21.0.0",
-    "tape": "~5.9.0"
+    "eslint": "~9.39.1"
   }
 }
